src/components/SelectBox/SelectBox.css
::-webkit-input-placeholder {
  color: #bdbdbd;
}

:-moz-placeholder {
  color: #bdbdbd;
  opacity: 1;
}

::-moz-placeholder {
  color: #bdbdbd;
  opacity: 1;
}

:-ms-input-placeholder {
  color: #bdbdbd;
}

::-ms-input-placeholder {
  color: #bdbdbd;
}

::placeholder {
  color: #bdbdbd;
}

.react-autosuggest__container {
  @apply absolute left-0 block w-full flex flex-row;
  top: 100%;
  margin-top: -3px;

  @screen lg {
    margin-top: -3px;
  }
}

.react-autosuggest__input {
  @apply py-1 px-3 w-full items-start appearance-none;
  font-weight: 400;
  font-size: 16px;
  background: #ffffff;
  border: 1px solid #232831;
  border-radius: 2px;

  @screen lg {
    border-width: 3px;
  }
}

.react-autosuggest__input--focused {
  outline: none;
}

.react-autosuggest__input::-ms-clear {
  display: none;
}

.react-autosuggest__input--open {
  border-radius: 0;
}

.react-autosuggest__suggestions-container {
  display: none;
}

.react-autosuggest__suggestions-container--open {
  margin-top: -3px;
  top: 100%;
  display: block;
  position: absolute;
  width: 100%;
  border: 1px solid #232831;
  background-color: #fff;
  font-size: 16px;
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  z-index: 2;

  @screen lg {
    margin-top: -3px;
    border-width: 3px;
  }
}

.react-autosuggest__suggestions-list {
  margin: 0;
  padding: 0;
  list-style-type: none;
  overflow-y: auto;
  max-height: 210px;
  text-align: left;
  word-break: break-word;
}

.react-autosuggest__suggestion {
  font-weight: 400;
  @apply py-1 px-3 cursor-pointer flex flex-row items-center;
}

.react-autosuggest__suggestion--highlighted {
  background-color: #436cff;
  color: #fff;
}

.react-autosuggest__section-container {
  border-top: 1px dashed #232831;
}

.react-autosuggest__section-container--first {
  border-top: 0;
}

.react-autosuggest__section-title {
  padding: 16px 24px;
  font-size: 12px;
  color: #777;
}

